--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted # runs a test on Ubuntu, Windows and macOS
+    runs-on: ubuntu-latest # runs a test on Ubuntu, Windows and macOS
 
     strategy:
       matrix:
