--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -26,9 +26,16 @@ jobs:
     steps:
       - name: Setup repo
         uses: actions/checkout@v2
+        
+      - id: Sleep Randomly
+        run: echo "PROCEED=$((RANDOM%2))" >> sleep 15
+        shell: bash
       
-#       - if: github.event == 'push'
-#         run: sleep 15
+      - if: github.event == 'push'
+        run: env.PROCEED
+        
+      - if: github.event == 'pull request'
+        run: env.PROCEED
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
