--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -14,24 +14,6 @@ on:
   pull_request:
     branches: [master]
 
-  release:
-    types: [published, created, edited]
-    steps:
-      - name: Get Current Time
-        uses: 1466587594/get-current-time@v2.0.0
-        id: current-time
-        with:
-          format: YYYYMMDD-HH
-          utcOffset: "+01:00"
-
-      - name: Use current time
-        env:
-          TIME: "${{ steps.current-time.outputs.second }}"
-          if: ${{github.event.issue.pull_request}}
-          runs-on: ubuntu-latest
-          steps:
-            - run: echo "The CI took ${{$TIME}} seconds"
-
 jobs:
   build:
     runs-on: ubuntu-latest # runs a test on Ubuntu, Windows and macOS
@@ -49,7 +31,19 @@ jobs:
         run: sleep 15
 
       - if: github.event == 'pull request'
-        run: sleep 18
+      - name: Get Current Time
+        uses: 1466587594/get-current-time@v2.0.0
+        id: current-time
+        with:
+          format: YYYYMMDD-HH
+          utcOffset: "+01:00"
+
+      - name: Use current time
+        env:
+          TIME: "${{ steps.current-time.outputs.second }}"
+
+      - run: echo "The CI took ${{$TIME}} seconds"
+      - run: sleep 18
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
