yaml file new fix-1

--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -31,7 +31,7 @@ jobs:
         run: sleep 15
 
       - if: github.event == 'pull request'
-      - run: sleep 18
+        run: sleep 18
 
       - name: Get Current Time
         uses: 1466587594/get-current-time@v2.0.0
@@ -40,12 +40,11 @@ jobs:
           format: YYYYMMDD-HH
           utcOffset: "+01:00"
 
-      - name: Use current time
+      - name: Add PR comment
+      - if: github.event == 'pull request'
         env:
           TIME: "${{ steps.current-time.outputs.second }}"
-
-      - if: github.event == 'pull request'
-      - run: echo "The CI took ${{$TIME}} seconds"
+        run: echo "The CI took ${{$TIME}} seconds"
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
