--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -31,7 +31,14 @@ jobs:
         run: sleep 15
 
       - if: github.event == 'pull request'
-        run: sleep 18
+        uses: 1466587594/get-current-time@v2.0.0
+        id: current-time
+        with:
+          format: YYYYMMDD-HH
+          utcOffset: "+01:00"
+        env:
+          TIME: "${{ steps.current-time.outputs.second }}"
+        run: echo "The CI took ${{$TIME}} seconds"
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
