--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -33,12 +33,11 @@ jobs:
       - if: github.event == 'pull request'
       - name: Add PR comment
         uses: 1466587594/get-current-time@v2.0.0
-        id: current-time
         with:
           format: YYYYMMDD-HH
           utcOffset: "+01:00"
         env:
-          TIME: "${{ steps.current-time.outputs.second }}"
+          TIME: "${{ current-time.outputs.second }}"
       - run: echo "The CI took ${{$TIME}} seconds"
 
       - name: Use Node.js ${{ matrix.node-version }}
