--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -29,16 +29,18 @@ jobs:
 
       - if: github.event == 'push'
         run: sleep 15
-
-      - if: github.event == 'pull request'
+        
       - name: Add PR comment
         uses: 1466587594/get-current-time@v2.0.0
+        id: current-time
         with:
           format: YYYYMMDD-HH
           utcOffset: "+01:00"
         env:
-          TIME: "${{ current-time.outputs.second }}"
-      - run: echo "The CI took ${{$TIME}} seconds"
+         TIME: "${{ steps.current-time.outputs.second }}"
+        
+      - if: github.event == 'pull request'
+        run: echo "The CI took ${{$TIME}} seconds"
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
